feat(Cron): Start to work on cronjob
