# server/business/search/provider/KijijiProvider.ts
@@ -1,0 +1,7 @@
+import {ProviderType} from "@business/search/provider/ProviderTypes"
+
+export class KijijiProvider {
+  public readonly type: ProviderType = ProviderType.KIJIJI
+
+
+}
